# Vukan-Triangle

./: .gitignore  CMakeLists.txt  README.md  spirv_to_c.sh
include/: conventions.h  instance.h  memory.h  window.h
shaders/: CMakeLists.txt  shader.frag  shader.vert
src/: conventions.c  main.c  memory.c  shader_variables.c
src/vulkan/: create_command_buffer.c  create_command_pool.c  create_framebuffers.c  create_image_views.c  create_instance.c  create_logical_device.c  create_pipeline.c  create_renderpass.c  create_shader_modules.c  create_signals.c  create_surface.c  create_swapchain.c  draw_frame.c  pick_physical_device.c  record_commands.c
